[tool.poetry]
name = "vcon-faker"
version = "0.1.0"
description = "A streamlit application to make fake vCons"
authors = ["Thomas Howe <ghostofbasho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = "5.2.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
attrs = "23.2.0"
blinker = "1.7.0"
boto3 = "1.34.63"
botocore = "1.34.63"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
distro = "1.9.0"
ffprobe = "0.5"
ffmpeg = "^1.4"
gitdb = "4.0.11"
gitpython = "3.1.42"
gtts = "2.5.1"
h11 = "0.14.0"
httpcore = "1.0.4"
httpx = "0.27.0"
idna = "3.6"
jinja2 = "3.1.3"
jmespath = "1.0.1"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
numpy = "1.26.4"
openai = "1.14.0"
packaging = "23.2"
pandas = "2.2.1"
pillow = "10.2.0"
protobuf = "4.25.3"
pyarrow = "15.0.1"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
pydeck = "0.8.1b0"
pydub = "0.25.1"
pygments = "2.17.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
referencing = "0.33.0"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.18.0"
s3transfer = "0.10.1"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
streamlit = "1.38.0"
tenacity = "8.2.3"
toml = "0.10.2"
toolz = "0.12.1"
tornado = "6.4"
tqdm = "4.66.2"
typing-extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "^2.2.2"
vcon = "^0.5.0"
watchdog = "4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
